GH-579 Add repository for language. Remove user settings. (#890)